feat: stream object